More stuff ... security update on mybatis and restore mysql from mariadb.  it didn't handle zulu time any better